--- a/app/index.pug
+++ b/app/index.pug
@@ -1,3 +1,12 @@
-html
+doctype html
+
+html(lang="ru")
+
     head
-    body
+    
+        title canvas animation
+        meta(charset='utf-8')
+        link(href="style.css", rel="stylesheet")
+        script(src="script.js")
+
+    body 123
