Fix app struct and release component equalizer

--- a/app/dev/index.pug
+++ b/app/dev/index.pug
@@ -6,7 +6,8 @@ html(lang="ru")
     
         title canvas animation
         meta(charset='utf-8')
-        link(href="style.css", rel="stylesheet")
-        script(src="script.js")
 
-    body 123
+    body
+    
+        include template/components/equalizer/main.pug
+        script(src='test.js')
