--- a/app/dev/style/components/equalizer/main.scss
+++ b/app/dev/style/components/equalizer/main.scss
@@ -1,12 +1,10 @@
 //
-// Сброс стандартных стилей
+// ============= Раздел переменных =============
 //
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-}
+
+$speed-slow: 0.5s;
+$speed-normal: 0.8s;
+$speed-fast: 1s;
 
 
 //
@@ -62,7 +60,7 @@
 
 
 //
-// ============= Разные анимационные функции для полос ========
+// ============= Разные анимационные функции для полос =============
 //
 
 .equalizer__level_animate-func-ease {
@@ -90,14 +88,14 @@
 // ============= Разная скорость анимации для полос ========
 //
 
-.equalizer__level_animate-duration-slow{
-    animation-duration: 1s;
+.equalizer__level_animate-duration-slow {
+    animation-duration: $speed-fast;
 }
 
-.equalizer__level_animate-duration-normal{
-    animation-duration: 0.8s;
+.equalizer__level_animate-duration-normal {
+    animation-duration: $speed-normal;
 }
 
-.equalizer__level_animate-duration-fast{
-    animation-duration: 0.5s;
+.equalizer__level_animate-duration-fast {
+    animation-duration: $speed-slow;
 }
