Add draft component track-list style, template and other small fixes

--- a/app/dev/index.pug
+++ b/app/dev/index.pug
@@ -6,8 +6,10 @@ html(lang="ru")
     
         title canvas animation
         meta(charset='utf-8')
+        link(href='style/base/normalize.css', rel='stylesheet')
 
     body
     
         include template/components/equalizer/main.pug
+        include template/components/track-list/main.pug
         script(src='test.js')
