--- a/app/dev/style/components/track-list/main.scss
+++ b/app/dev/style/components/track-list/main.scss
@@ -131,6 +131,7 @@ $panel-animation-speedk: 5;
     flex-wrap: nowrap;
 
     width: 100%;
+    height: 500px;    // DEBUG:
 
     font-size: 1rem;
 
