--- a/app/dev/style/components/track-list/main.scss
+++ b/app/dev/style/components/track-list/main.scss
@@ -11,7 +11,7 @@ $vscroll-border-radius: $vscroll-width * 2;
 $vscroll-bg-color: #676C78;
 
 $audio-track-padding: 5px;
-$audio-track-font-size: 1.2em;
+$audio-track-font-size: 1.2rem;
 $audio-track-color: #B0BBCA;
 $audio-track-color-hover: white;
 $audio-track-bg-color-played: #676C78;
@@ -122,12 +122,10 @@ $panel-animation-speedk: 5;
 
 
 .track-list {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+    display: list;
 
     width: 100%;
-    height: 500px;    // DEBUG:
+    height: 100px;
 
     font-size: 1rem;
 
@@ -139,11 +137,12 @@ $panel-animation-speedk: 5;
 
 
 .audio-track {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+    display: list-item;
 
     padding: $audio-track-padding;
+    height: auto;
+
+    font-size: 0;
 
     cursor: pointer;
     transition: color $animation-duration $animation-time-func;
@@ -165,6 +164,15 @@ $panel-animation-speedk: 5;
 }
 
 
+.audio-track__content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+
+    height: 100%;
+}
+
+
 .audio-track__title {
     font-size: $audio-track-font-size;
 }
@@ -173,5 +181,6 @@ $panel-animation-speedk: 5;
 .audio-track__time {
     padding-right: $vscroll-width;
 
+    font-size: $audio-track-font-size;
     line-height: $audio-track-font-size;
 }
