--- a/app/dev/style/components/track-list/main.scss
+++ b/app/dev/style/components/track-list/main.scss
@@ -5,10 +5,10 @@
 
 
 $panel-bg-color: #414A59;
+$panel-animation-speedk: 5;
 
-$vscroll-width: 15px;
-$vscroll-border-radius: $vscroll-width * 2;
-$vscroll-bg-color: #676C78;
+$track-list-border-width: 5px;
+$track-list-border-bg-color: #D24F5A;
 
 $audio-track-padding: 5px;
 $audio-track-font-size: 1.2rem;
@@ -17,10 +17,38 @@ $audio-track-color-hover: white;
 $audio-track-bg-color-played: #676C78;
 $audio-track-bg-color-selected: #418FE0;
 
-$panel-animation-speedk: 5;
-
 
 // ================ Анимации ==================== //
+
+
+@keyframes animation-track-list-border-color {
+    from {
+        border-color: transparent;
+    }
+    to {
+        border-color: $track-list-border-bg-color;
+    }
+}
+
+
+@keyframes animation-track-list-border-top-color {
+    from {
+        border-top-color: transparent;
+    }
+    to {
+        border-top-color: $track-list-border-bg-color;
+    }
+}
+
+
+@keyframes animation-track-list-border-bottom-color {
+    from {
+        border-bottom-color: transparent;
+    }
+    to {
+        border-bottom-color: $track-list-border-bg-color;
+    }
+}
 
 
 @keyframes animation-played {
@@ -68,9 +96,7 @@ $panel-animation-speedk: 5;
 
 
 .panel {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    position: relative;
 
     width: 100%;
     height: 100%;
@@ -78,11 +104,6 @@ $panel-animation-speedk: 5;
     background-color: $panel-bg-color;
 
     overflow: hidden;
-
-
-    &:hover .panel__vscroll {
-        @include animate_once(animation-show, $animation-duration);
-    }
 }
 
 
@@ -100,36 +121,38 @@ $panel-animation-speedk: 5;
 }
 
 
-.panel__vscroll {
-    margin-left: -$vscroll-width;
-    border-radius: $vscroll-border-radius;
-    width: $vscroll_width;
-    height: 0;
-
-    background-color: $vscroll-bg-color;
-
-    opacity: 0;
-    cursor: pointer;
-}
-
-
-.panel__vscroll_hidden {
-    display: none;
-}
-
-
 // ================ Аудио-лист ==================== //
 
 
 .track-list {
-    display: list;
-
+    border-width: 0;
+    border-top-width: $track-list-border-width;
+    border-bottom-width: $track-list-border-width;
     width: 100%;
     height: 100px;
 
     font-size: 1rem;
 
     color: $audio-track-color;
+    border-style: solid;
+    border-color: transparent;
+
+    overflow: hidden;
+}
+
+
+.track-list_border-top {
+    @include animate-once(animation-track-list-border-top-color, $animation-duration);
+}
+
+
+.track-list_border-bottom {
+    @include animate-once(animation-track-list-border-bottom-color, $animation-duration);
+}
+
+
+.track-list_border-bottom.track-list_border-top {
+    @include animate-once(animation-track-list-border-color, $animation-duration);
 }
 
 
@@ -179,8 +202,6 @@ $panel-animation-speedk: 5;
 
 
 .audio-track__time {
-    padding-right: $vscroll-width;
-
     font-size: $audio-track-font-size;
     line-height: $audio-track-font-size;
 }
