--- a/app/dev/index.pug
+++ b/app/dev/index.pug
@@ -12,4 +12,5 @@ html(lang="ru")
     
         include template/components/equalizer/main.pug
         include template/components/track-list/main.pug
+        include template/components/helper/main.pug
         script(src='test.js')
