fix Equalizer and append Helper component

--- a/src/color-schema.scss
+++ b/src/color-schema.scss
@@ -3,7 +3,11 @@
 $bg-color-main-front: #222D32;
 $bg-color-main-back: #29353B;
 
-$element-color-inactive: #05aac0;
+$element-color-1-inactive: #05aac0;
+$element-color-1-active: #00bcd4;
+
+$element-color-2-inactive: #d3dae3;
+$element-color-2-active: #cfd8dc;
 
 // $bg-colors: (
 //     1: #222d32,
