--- a/src/base.scss
+++ b/src/base.scss
@@ -1,3 +1,6 @@
+@import "color-schema.scss";
+
 $animation-duration: 0.2s;
 $animation-timing-function: linear;
 $border-radius: 5px;
+$box-shadow: 0 0 2px 0 $color-element-1-active;
