append components Track and draft TrackList

--- a/src/color-schema.scss
+++ b/src/color-schema.scss
@@ -7,7 +7,7 @@ $color-element-1-inactive: #05aac0;
 $color-element-1-active: #00bcd4;
 
 $color-element-2-inactive: #d3dae3;
-$color-element-2-active: #cfd8dc;
+$color-element-2-active: #eee;
 
 // $element-bg-color: #243035;
 
